@@ -12,6 +12,8 @@
         <entry key="app/src/main/res/drawable/ic_palette_black_24dp.xml" value="0.3640625" />
         <entry key="app/src/main/res/drawable/ic_round_all_directions_anim.xml" value="0.3640625" />
         <entry key="app/src/main/res/drawable/ic_round_aod.xml" value="0.3640625" />
+        <entry key="app/src/main/res/drawable/ic_round_autorenew.xml" value="0.3640625" />
+        <entry key="app/src/main/res/drawable/ic_round_autorenew_anim.xml" value="0.3640625" />
         <entry key="app/src/main/res/drawable/ic_round_check_circle_anim.xml" value="0.3640625" />
         <entry key="app/src/main/res/drawable/ic_round_doodle.xml" value="0.3640625" />
         <entry key="app/src/main/res/drawable/ic_round_doodle_anim.xml" value="0.3640625" />
