@@ -252,7 +252,7 @@
         <ImageView
           android:id="@+id/image_size_zoom_rotation"
           style="@style/Widget.Doodle.ImageView.ListItem.Icon"
-          android:src="@drawable/ic_round_filter_center_focus_anim"
+          android:src="@drawable/ic_round_autorenew_anim"
           tools:ignore="ContentDescription" />
 
         <LinearLayout style="@style/Widget.Doodle.LinearLayout.ListItem.TextBox">
